# audio-matched-filter

./: .gitignore  CMakeLists.txt  README.md  amf.geany  main.cpp  word_peak.geany
source/: filter.cpp  filter.hpp  generator.cpp  generator.hpp  includes.hpp  main.cpp  plot.cpp  plot.hpp  recorder.cpp  recorder.hpp  signal.cpp  signal.hpp  signal_generator.cpp  signal_generator.hpp  spectrum_analyzer  spectrum_analyzer.cpp  spectrum_analyzer.hpp  taper.cpp  taper.hpp  transformer.cpp  transformer.hpp
